--- a/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
+++ b/UD4A3 - Página Retro_JoseLuisTarragaSegura_2DAW/index.html
@@ -11,47 +11,52 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Russo+One&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Scribble&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body class="d-flex align-items-center justify-content-between flex-column">
     <audio src="tomp3.cc - Don Omar Tego Calderon Bandolero.mp3" autoplay></audio>
-   
+    <div class="app d-md-flex flex-column align-items-center d-none col-1 pt-1">
+        <img src="https://static.wikia.nocookie.net/fastandfurious/images/8/87/Fast_One_Poster.jpg" alt="Imagen Peli" class="col-8">
+        <p>Fast&Furius</p>
+    </div>
     <main class="col-8 m-4">
-        <header class="col-12 p-2">
+        <header class="col-12 p-2  mb-lg-0">
             <div class="  col-12 d-flex align-items-center p-1 justify-content-between">
                 <div class="d-flex col-3">
                     <img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Foto Toyota Supra" width="40px" class="ms-2 pixelated">
                     <p class="m-0 ms-2 ">Fast&Furius</p>
                 </div>
-                <div class="col-4 d-flex justify-content-end pe-2">
+                <div class="col-4 d-flex justify-content-end pe-2 ">
                     <button class="me-2 mas-borde">_</button>
                     <button class="me-2"><i class="bi bi-window-fullscreen mas-borde"></i></button>
                     <button class="me-2"><i class="bi bi-x-lg mas-borde"></i></button>
                 </div>
             </div>
-            <div>
-                <a href="">File</a>
-                <a href="">Edit</a>
-                <a href="">View</a>
-                <a href="">Favorites</a>
-                <a href="">Help</a>
+            <div class="d-xl-inline-block d-lg-none d-inline-block mb-0">
+                <a class=" mb-0"  href="">File</a>
+                <a class=" mb-0"  href="">Edit</a>
+                <a  class=" mb-0" href="">View</a>
+                <a class=" mb-0"  href="">Favorites</a>
+                <a class=" mb-0"  href="">Help</a>
             </div>
         </header>
-        <div class="col-12 separador"></div>
-        <nav class="col-12 d-flex p-2 align-items-center">
-            <i class="col-1">Adress:</i>
-            <input type="text" class="col-11" value="http://www.Fast&Furius.com">
+        <div class="col-12 separador d-lg-flex d-none"></div>
+        <nav class="col-12 p-2 align-items-center d-lg-flex d-none">
+            <i class="col-xl-1 col-2">Adress:</i>
+            <input type="text" class="col-xl-11 col-8" value="http://www.Fast&Furius.com">
         </nav>
-        <div class="col-12 separador"></div>
-        <main class="col-12">
+        <div class="col-12 separador d-lg-flex d-none"></div>
+        <main class="col-12 mt-0 mt-xxl-2 ">
             <div class="col-12">
                 <img src="logo.png" alt="Logo fast$furius" class="col-4">
                 <div class="col-12 d-flex flex-column align-items-center ">
                     <div class="col-8  header-fake p-3">
                         <h1 class="text-center"><i>LOS MEJORES COCHES</i></h1>
                     </div>
-                    <div class="d-flex justify-content-center col-12 pe-3">
-                        <article class="col-10 mt-5">
+                    <div class="d-flex justify-content-center col-12 pe-3 ">
+                        <article class="col-12 mt-5 col-lg-10">
                             <section class=" d-flex justify-content-around col-10 ms-4 p-3">
                                 <div class="col-5 p-4">
                                     <h2 class="text-center">Top 3</h2>
@@ -83,15 +88,15 @@
                                 <img src="https://cdn.topgear.es/sites/navi.axelspringer.es/public/media/image/2021/06/subasta-barrett-jackson-toyota-supra-stunt-1-fast-furious-2383301.jpg" class="col-4" alt="">
                             </section>
                             <div class="video-youtube d-block">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZZOu5D_PWLc?si=Nh9_ez4AsqsizgEO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/5BkXzLvqnkc?si=-03R9KN4f3fLhLtv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/NOLlgPn8cIY?si=H6eCmgvtx79wsscO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe class="col-10 " height="315" src="https://www.youtube.com/embed/ZZOu5D_PWLc?si=Nh9_ez4AsqsizgEO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe class="col-10 mt-2" height="315" src="https://www.youtube.com/embed/5BkXzLvqnkc?si=-03R9KN4f3fLhLtv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                <iframe class="col-10 mt-2" height="315" src="https://www.youtube.com/embed/NOLlgPn8cIY?si=H6eCmgvtx79wsscO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </article>
-                        <aside class="col-2 d-block">
-                            <div class="col-12 mt-5 me-5" id="anuncio1">
+                        <aside class="col-lg-2 d-lg-block d-none">
+                            <div class="col-12 mt-5 me-5 " id="anuncio1">
                                 <audio src="tomp3 (mp3cut.net).mp3" id="audioTantoQueDarte"></audio>
-                                <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/diarioas/I5PWQDNH2RLQBPZIZTGDNZIZBU.jpg" class="col-12 pixelated" alt="Anuncio">
+                                <img src="https://cloudfront-eu-central-1.images.arcpublishing.com/diarioas/I5PWQDNH2RLQBPZIZTGDNZIZBU.jpg" class="col-12 pixelated h-100" alt="Anuncio">
                                 <button class=""><i class="bi bi-x-lg mas-borde"></i></button>
                                 <h6 class="col-8"></h6>
                                 <div class="fueguitos col-6 d-flex justify-content-around">
@@ -100,18 +105,27 @@
                                     <img src="y8.gif" alt="Fueguitos" class="col-3">
                                 </div>
                             </div>
-                            <div class="mt-5 col-12 d-flex align-items-center">
+                            <div class="mt-5 col-12 d-flex align-items-center justify-content-center ">
+                                <h3 >Juega a la super Ruleta</h3>
+                                <button class=""><i class="bi bi-x-lg mas-borde"></i></button>
                                 <img src="ruleta1.png" class="col-12" alt="Ruleta">
+                                <h1 class="col-11" >¡ DALE YA!</h1>
+                                <div class="palo-bolita-blanca col-8">
+                                    <div class="bolita-blanca"></div>
+                                </div>
                             </div>
                         </aside>
                     </div>
+                    <footer class="mt-5 col-12 d-flex justify-content-center align-items-center">
+                        <h3>© 2022 Jose Luis Tárraga Segura, 2DAW</h3>
+                    </footer>
                 </div>
             </div>
         </main>
     </main>
-    <footer class="col-12 d-flex align-items-center">
-        <button class="col-1 p-2 ms-2"><img src="https://www.pngitem.com/pimgs/m/34-340133_windows-98-icons-png-microsoft-windows-3-1-logo.png" alt="" class="col-5 pixelated"> Start</button>
-        <button class="col-2 ms-2 p-2 d-flex justify-content-start align-items-center"><img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Foto Toyota Supra" class="col-3 pixelated"> Fast&Furius</button>
+    <footer class="col-12 d-xl-flex d-none align-items-center pt-4 pb-3">
+        <button class="col-1 p-2 ms-2"><img src="https://www.pngitem.com/pimgs/m/34-340133_windows-98-icons-png-microsoft-windows-3-1-logo.png" alt="" class="col-xl-5 col-2 pixelated"> Start</button>
+        <button class="col-3 ms-2 p-2 d-flex justify-content-start align-items-center"><img src="https://hips.hearstapps.com/hmg-prod/images/the-fast-and-the-furious-toyota-supra-subasta-1624180933.jpg" alt="Foto Toyota Supra" class="col-2 pixelated"> Fast&Furius</button>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
